Update Notebook Summary and Next Step

--- a/notebooks/02_eda_analysis.ipynb
+++ b/notebooks/02_eda_analysis.ipynb
@@ -28,9 +28,18 @@
     "\n",
     "- Using data from 2014 onward provides sufficient history to study volatility behavior and regime dynamics while remaining representative of the modern business environment.\n",
     "\n",
-    "![image.png](attachment:image.png)\n",
+    "![image.png](attachment:image.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please also visit [02_eda_analysis_limited_horizon](./02_eda_analysis_limited_horizon.ipynb) the eda analysis performed on limited horizon to better understand the difference and improvement that longer horizon provides. \n",
     "\n",
-    "For interactive plots, please run this notebook locally or use [![Binder]](https://mybinder.org/v2/gh/shashankgarewal/Time-Series-Analysis-Forecasting/HEAD?filepath=notebooks/02_eda_analysis.ipynb)"
+    "Addtionally, the first notebook [01_data_inspection](./01_data_inspection.ipynb) includes data inspection like quality and sanity checks.\n",
+    "\n",
+    "For interactive plots of this notebook, please run this notebook locally or use [![Binder]](https://mybinder.org/v2/gh/shashankgarewal/Time-Series-Analysis-Forecasting/HEAD?filepath=notebooks/02_eda_analysis.ipynb)"
    ]
   },
   {
@@ -2045,19 +2054,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Returns vs Volatility: While returns and log-returns show little to no linear autocorrelation (≈ white noise), their squared values exhibit significant autocorrelation, indicating persistence in volatility rather than in the mean.\n",
+    "ACF Insight: The slow decay in the ACF of squared log-returns suggests volatility clustering and long memory in volatility (variance), a hallmark of ARCH/GARCH-type behavior.\n",
     "\n",
-    "ACF Insight: The slow decay in the ACF of squared log-returns suggests volatility clustering and long memory in variance, a hallmark of ARCH/GARCH-type behavior.\n",
-    "\n",
-    "Rolling Std Insight: Rolling standard deviation reveals time-varying volatility regimes, showing that periods of high and low variance persist over time, even when the return series itself appears random.\n",
-    "\n",
-    "Since the data has volatility cluters, we can perform **GARCH modeling**."
+    "Rolling Std Insight: Rolling standard deviation reveals time-varying volatility regimes, showing that periods of high and low variance persist over time, even when the return series itself appears random."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## EDA Summary\n",
+    "\n",
+    "- The price series exhibits strong trend behavior and is non-stationary in levels.\n",
+    "- Log-return transformation stabilizes the mean and variance, making it more suitable for modeling.\n",
+    "- Stationarity diagnostics suggest that log-return (or, return) are closer to weak stationarity, while price levels are not.\n",
+    "- ACF and PACF analysis of log-returns shows limited short-term autocorrelation, indicating a weak linear memory and justifying simple baseline models as initial benchmarks.\n",
+    "- Volatility is time-varying rather than constant, with clear clustering of high and low-volatility periods. This behavior is characteristic of financial time series and suggests heteroskedasticity.\n",
+    "\n",
+    "Overall, the data showed expected behaviour for a daily stock price. This EDA establishes that modeling should be performed on transformed series (e.g., log-return)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next steps\n",
+    "[03_feature_engineering.ipynb](03_feature_engineering.ipynb) focuses is to construct feature representations that explicitly capture temporal dependence and volatility structure for downstream modeling."
+   ]
   }
  ],
  "metadata": {
