Update next step comment

--- a/notebooks/02_eda_analysis.ipynb
+++ b/notebooks/02_eda_analysis.ipynb
@@ -2385,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2402,11 +2402,11 @@
     "groups = [group['LogReturn'].dropna().values \n",
     "          for name, group in df.groupby('Month')]\n",
     "\n",
-    "# ANOVA\n",
+    "# ANOVA test for constant mean \n",
     "f_stat, p_anova = stats.f_oneway(*groups)\n",
     "print(f\"Month of Year effect: ANOVA p-value {p_anova:.4f}\")\n",
     "\n",
-    "# Levene\n",
+    "# Levene - varying variance\n",
     "w_stat, p_levene = stats.levene(*groups)\n",
     "print(f\"Month of Year: Levene p-value {p_levene:.4f}\")\n",
     "\n",
