Update next step comment

--- a/notebooks/03_statistical_model.ipynb
+++ b/notebooks/03_statistical_model.ipynb
@@ -174,7 +174,7 @@
    "id": "24c38c21",
    "metadata": {},
    "source": [
-    "## Model Building"
+    "## Baseline Model"
    ]
   },
   {
@@ -931,22 +931,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "id": "28878bdc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# --- Hysteresis thresholds (tune these) ---\n",
-    "q_enter = 0.80   # enter high vol when vol >= 80th percentile\n",
-    "q_exit  = 0.60   # exit high vol when vol <= 60th percentile\n",
+    "# Hysteresis thresholds - Using High threshold to enter regime, lower to exit ---\n",
+    "q_enter = 0.80\n",
+    "q_exit  = 0.60\n",
     "\n",
     "enter_th = vol_plot.quantile(q_enter)\n",
     "exit_th  = vol_plot.quantile(q_exit)\n",
     "\n",
-    "# --- Build sticky regime state ---\n",
+    "# build sticky regime state ---\n",
     "state = []\n",
     "in_high = False\n",
     "for v in vol_plot.values:\n",
@@ -981,13 +978,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "id": "2babf6d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "k = 3.0  # shock threshold multiplier\n",
-    "\n",
+    "# isolated spike treatement as shock - regime won't change\n",
     "shock = (r_plot.abs() > k * vol_plot)"
    ]
   },
@@ -1047,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "46aa41bf",
    "metadata": {},
    "outputs": [],
@@ -1467,21 +1464,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7610dc4d",
+   "id": "77465220",
    "metadata": {},
    "source": [
-    "Regime Aware Volatility is performing better but slightly. \n",
+    "Overall improvements v/s single GARCH model were modest (~0.5% QLIKE), but performance gains is stronger during high-volatility periods (~25% lower variance MSE).\n",
     "\n",
-    "This suggest that MSFT stock regime are not strongly different."
+    "This suggests regime-aware modeling adds robustness particularly during risky market conditions rather than uniformly improving average accuracy."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e37e0b7e",
+   "cell_type": "markdown",
+   "id": "7610dc4d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Next Steps:\n",
+    "* Perform HMM based regime detection.\n",
+    "* Price Chart Simulation by converting volatility into price interval. "
+   ]
   }
  ],
  "metadata": {
