Remove after fan chart

--- a/notebooks/04_probabilistic_forecasting.ipynb
+++ b/notebooks/04_probabilistic_forecasting.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Expected price & return\n",
-    "* Increase test window and the squared returns instead of rolling volatiity to dynamically switch regime, and forecast volatility.\n",
+    "* Increase test window and the log-returns and rolling volatiity to dynamically switch regime, and forecast volatility.\n",
     "* Uses monte carlo simulation to probabilistic estimate of return in next time steps.\n",
     "* Unfold forecasted returns to compute price and plot price chart."
    ]
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6e34085f",
    "metadata": {},
    "outputs": [],
@@ -76,6 +76,27 @@
     "df[\"pctLogReturn\"] = df['LogReturn'] * 100 \n",
     "df.dropna(inplace=True, axis=0)\n",
     "df_train, df_test = df[:'2022-01-01'], df['2022-01-01':]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "013b2ea8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Close', 'High', 'Low', 'Open', 'Volume', 'LogReturn', 'pctLogReturn'], dtype='object', name='Price')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns.get_level_values(0)"
    ]
   },
   {
@@ -514,33 +535,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20ff8407",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulation done\n",
-      "Price median: 317.36770512625054\n",
-      "Vol median: 0.041333172702557486\n",
-      "Return std: 0.04428023029014873\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2e3701d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
